Add README instructions to solve Java out of memory error